scrollbar hack fix

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,3 @@
-/* * {
-  user-select: none;
-} */
 @font-face {
   font-family: Titillium;
   src: url('fonts/Titillium_Web/TitilliumWeb-Regular.ttf');
